--- a/koraplay_test/pubspec.yaml
+++ b/koraplay_test/pubspec.yaml
@@ -63,7 +63,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - asset/doctor.jpg
-#     - images/a_dot_ham.jpeg
+    - asset/doctor2.jpg
+    - asset/profile1.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
